--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,10 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.17", features = ["cargo", "derive"] }
 log = "0.4.17"
+prost = "0.11.0"
 simplelog = { version = "0.12.0", features = ["ansi_term"] }
+tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
+tonic = "0.8.0"
+
+[build-dependencies]
+tonic-build = "0.8.0"
