--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.1.0"
 clap = { version = "3.2.17", features = ["cargo", "derive"] }
 log = "0.4.17"
 prost = "0.11.0"
